--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "eslint-import-resolver-babel-module": "^5.1.0",
     "faker": "^4.1.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^8.1.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@svgr/webpack": "^4.2.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-module-resolver": "^3.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.13.0",
     "prettier": "^1.17.0"
